# KbG

1_fasea/: Zuzenketak.odt
1_fasea/Iturburu-kodea/: KbGprograma  definitions.h  display.c  io.c  main.c
2_fasea/Iturburu-kodea/: CMakeLists.txt  KbGprograma  definitions.h  display.c  display.h  io.c  io.h  load_obj.c  main.c  matrizeak.c  matrizeak.h
3_fasea/Iturburu-kodea/: .gitignore  definitions.h  display.c  io.c  io.h  main.c  matrizeak.c  matrizeak.h
